# morpheus

./: .dependency-cruiser.js  .editorconfig  .gitignore  .gitlab-ci.yml  Makefile  Readme.md  UPGRADE_ANALYSIS.md  claude.md  docker-compose-sonarqube.yml  docker-compose.dev.yml  docker-compose.yml  jest.config.ts  jest.e2e.config.ts  jest.setup.ts  package-lock.json  package.json  sonar-project.properties  webpack.config.ts
.scannerwork/: report-task.txt
src/backend/: .editorconfig  .gitignore  .gitlab-ci.publish.yml  Makefile  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
src/backend/config/: settings.toml
src/backend/docker/: Dockerfile  Dockerfile.development  Dockerfile.production  celery.Dockerfile  docker-entrypoint.sh  flask.Dockerfile
src/backend/docker/docker-entrypoint.d/: 10-init-mongodb.sh  10-run-database-migrations.sh
src/backend/environments/dev/scripts/: create_migration.sh  run_flask_cli_command.sh  setup_pyenv.sh  util.inc.sh
src/backend/environments/dev/scripts/qa_check/: check_layered_architecture.sh
src/backend/requirements/: dev.txt  prod.txt  test.txt
src/backend/scripts/dev/: build-openapi-spec.sh  install-dev.sh  qa-check.sh  run-celery-worker.sh  run-flask-app.sh  run-flask-cli-command.sh  run-notebooks.py  run-notebooks.sh  start-dev.sh  stop-all-celery-workers.sh  stop-dev.sh  util.inc.sh
src/backend/scripts/dev/environment/: install-requirements.sh  setup-pyenv.sh
src/backend/scripts/dev/migrations/: create-migration.sh  migrate-up.sh
src/backend/scripts/dev/qa_check/: check-code-style.sh  check-layered-architecture.sh  fix-code-style.sh  run-static-code-analysis.sh  run-tests.sh
src/backend/src/: alembic.ini  init_mongodb.py  task_queue.py  wsgi.py
src/backend/src/init/: mongodb.py
src/backend/src/migrations/: env.py
src/backend/src/morpheus/: app.py  openapi.bundle.old.json  openapi.yml  settings.py
src/backend/src/morpheus/assets/: openapi.yml
src/backend/src/morpheus/assets/types/: AssetList.py
src/backend/src/morpheus/authentication/: auth.py  openapi.yml  outgoing.py
src/backend/src/morpheus/authentication/incoming/: __init__.py
src/backend/src/morpheus/authentication/infrastructure/: bearer_token.py  keycloak_openid_provider.py
src/backend/src/morpheus/authentication/outgoing/: __init__.py
src/backend/src/morpheus/authentication/schema/: OAuthClientId.yaml  OAuthPasswordGrantRequest.yaml  OAuthRefreshTokenGrantRequest.yaml  OAuthRevokeTokenRequest.yaml  OAuthTokenRequest.yaml  OAuthTokenResponse.yaml
src/backend/src/morpheus/authentication/types/: KeycloakUserData.py
src/backend/src/morpheus/common/api/: Pydantic.py
src/backend/src/morpheus/common/application/: Message.py  Projector.py
src/backend/src/morpheus/common/types/: Bool.py  DateTime.py  EpsgCode.py  Exceptions.py  File.py  Float.py  Integer.py  Pagination.py  Pagination_test.py  String.py  Uuid.py  __init__.py
src/backend/src/morpheus/datahub/: app.py  incoming.py
src/backend/src/morpheus/modflow/: bootstrap.py  cli_commands.py  openapi.yml  routes.py  tasks.py
src/backend/src/morpheus/modflow/schema/: CreateModflowModelRequest.yaml
src/backend/src/morpheus/modflow/types/: BaseModelVersion.py  Boundaries.py  Layers.py  Metadata.py  ModflowModel.py  Permissions.py  Project.py  Scenarios.py  Settings.py  SpatialDiscretization.py  SpatialDiscretization_test.py  TimeDiscretization.py  User.py
src/backend/src/morpheus/project/: bootstrap.py  cli_commands.py  openapi.yml  routes.py  tasks.py
src/backend/src/morpheus/project/domain/: AssetService.py  PermissionService.py
src/backend/src/morpheus/project/incoming/: __init__.py
src/backend/src/morpheus/project/types/: Asset.py  Exceptions.py  Group.py  Model.py  ModelVersion.py  Permissions.py  Project.py  Scenarios.py  User.py
src/backend/src/morpheus/sensor/: bootstrap.py  cli_commands.py  openapi.yml  routes.py
src/backend/src/morpheus/sensor/types/: SensorData.py  SensorData_test.py  SensorList.py  SensorList_test.py  SensorsLatestValues.py  SensorsLatestValues_test.py  __init__.py
src/backend/src/morpheus/sensors/: __init__.py  app.py  cli_commands.py  openapi.yml  routes.py
src/backend/src/morpheus/sensors/incoming/: __init__.py
src/backend/src/morpheus/sensors/presentation/: api.py  cli.py
src/backend/src/morpheus/sensors/types/: SensorData.py  SensorData_test.py  SensorList.py  SensorList_test.py  SensorsLatestValues_test.py  __init__.py  sensor_list.py
src/backend/src/morpheus/user/: bootstrap.py  cli_commands.py  incoming.py  openapi.yml  routes.py
src/backend/src/morpheus/users/: openapi.yml
src/backend/src/notebooks/: ActiveCellsPerformance.ipynb  ActiveCellsPerformanceAlgorithm.ipynb  BoundaryImport-Legacy-North.ipynb  BoundaryImport-Legacy-South.ipynb  CommandClasses.ipynb  ConstantHeadBoundary.ipynb  ConstantHeadObservation.ipynb  DataClasses.ipynb  EventSourcing.ipynb  EventSourcingBaseModel.ipynb  EventSourcingModel.ipynb  Gemetries.ipynb  GeneralHeadBoundary.ipynb  GridToGridInterpolation.ipynb  LayerProperty.ipynb  LayersCollection.ipynb  LineStringMapping.ipynb  LineStringNearestPoint.ipynb  Mf2005Calculation.ipynb  Mf2005CalculationRepository.ipynb  Mf2005CalculationWithCelery.ipynb  Mf6SimpleModelExample.ipynb  NumpyArrayWithNoneValues.ipynb  Permissions.ipynb  RasterInterpolation.ipynb  RasterToGridInterpolation.ipynb  Rasterfiles.ipynb  ReadHeadsFileOfFailedCalculation.ipynb  RechargeBoundary.ipynb  RioPrimero.ipynb  RioPrimeroFlopyLecture.ipynb  RioPrimeroWithCommands.ipynb  Shapefiles.ipynb  SpatialDiscretization.ipynb  SpatialDiscretizationCartesianGrid.ipynb  TaskQueue.ipynb  Test_ConstantHeadBoundary.ipynb  Test_DrainBoundary.ipynb  Test_DrainHeadBoundary.ipynb  Test_EvapotranspirationBoundary.ipynb  (+9 more)
src/backend/src/notebooks/legacy/: BoundaryImport-Legacy-North.ipynb  BoundaryImport-Legacy-South.ipynb  HeadObservationImport-Legacy-North.ipynb  HeadObservationImport-Legacy-South.ipynb
src/backend/src/schema/: openapi.yaml
src/backend/src/tests/: __init__.py  conftest.py
src/backend/src/tests/morpheus/: __init__.py
(+2815 files in other folders)
