[project]
name = "morpheus-backend"
version = "1.0.0"
description = "Morpheus groundwater modeling backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Authlib==1.3.0",
  "Dynaconf==3.2.4",
  "Flask-Cors==4.0.0",
  "Flask==3.0.1",
  "SQLAlchemy==2.0.25",
  "celery==5.3.6",
  "flopy==3.7.0",
  "geopandas==0.14.2",
  "geotiff==0.2.10",
  "gunicorn==21.2.0",
  "inflection==0.5.1",
  "numcodecs==0.12.1",
  "python-magic==0.4.24",
  "openapi-core==0.19.0",
  "pandas==2.2.0",
  "pillow==10.2.0",
  "psycopg2-binary==2.9.9",
  "pyarrow==15.0.0",
  "pygeoif==1.2.0",
  "pymongo==4.6.1",
  "pyproj==3.6.1",
  "python-keycloak==3.7.0",
  "scipy==1.12.0",
  "shapely==2.0.2",
  "simplejson==3.19.2",
  "zarr==2.12.0",
]

[project.optional-dependencies]
dev = [
  "autoflake==2.3.1",
  "autopep8==2.0.4",
  "dep-check==3.0.1",
  "flake8==7.0.0",
  "folium==0.20.0",
  "jupyter==1.0.0",
  "jupyterlab==4.0.11",
  "matplotlib==3.10.8",
  "papermill==2.6.0",
  "pep8-naming==0.13.3",
  "pip==26.0",
  "pyright==1.1.408",
  "pytest==7.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/morpheus"]

[tool.uv]
# Ensure uv installs MODFLOW binaries
# Note: get-modflow command still needed after install

[tool.uv.sources]
# If you need to use local packages or git repos, configure them here
