[project]
name = "morpheus-backend"
version = "1.0.0"
description = "Morpheus groundwater modeling backend"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "Authlib",
  "Dynaconf",
  "Flask-Cors==4.0.0",
  "Flask==3.0.1",
  "SQLAlchemy==2.0.25",
  "celery==5.3.6",
  "flopy==3.7.0",
  "geopandas",
  "geotiff",
  "gunicorn",
  "inflection",
  "numcodecs",
  "python-magic",
  "openapi-core==0.19.0",
  "pandas",
  "pillow",
  "psycopg2-binary",
  "pyarrow",
  "pygeoif",
  "pymongo",
  "pyproj",
  "python-keycloak",
  "sentry-sdk[flask]==2.13.0",
  "scipy",
  "shapely",
  "simplejson",
  "tifffile>=2023.0.0,<2024.8.0",
  "zarr"
]

[project.optional-dependencies]
dev = [
  "basedpyright",
  "dep-check",
  "folium",
  "jupyter",
  "jupyterlab",
  "matplotlib",
  "papermill",
  "pytest",
  "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/morpheus"]

[tool.uv]
# Ensure uv installs MODFLOW binaries
# Note: get-modflow command still needed after install

[tool.uv.sources]
# If you need to use local packages or git repos, configure them here

[tool.basedpyright]
include = ["src/morpheus"]
exclude = [
  "**/__pycache__",
  "**/.pytest_cache",
  "**/notebooks/*",
]
pythonVersion = "3.13"
typeCheckingMode = "basic"
ignore = []
reportAny = false
reportMissingImports = "error"
reportMissingTypeStubs = false
pythonPlatform = "Linux"
executionEnvironments = [
  { root = "src" }
]

[tool.ruff]
line-length = 180
include = ["src/morpheus/**/*.py", "src/tests/**/*.py", "src/*.py"]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

# Disable rules that overlap/conflict with formatting:
ignore = [
  # indentation (formatter owns this)
  "W191", # tab-indentation
  "E111", # indentation-with-invalid-multiple
  "E114", # indentation-with-invalid-multiple-comment
  "E117", # over-indented

  # docstring/quote style (formatter owns this)
  "D206", # docstring-tab-indentation
  "D300", # triple-single-quotes
  "Q000", # bad-quotes-inline-string
  "Q001", # bad-quotes-multiline-string
  "Q002", # bad-quotes-docstring
  "Q003", # avoidable-escaped-quote

  # trailing-comma rules (formatter owns this)
  "COM812", # missing-trailing-comma
  "COM819", # prohibited-trailing-comma
]
